--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  video_player: ^0.10.8+1
-  chewie: ^0.9.8+1
+  cupertino_icons: ^1.0.3 #^0.1.3
+  video_player: ^2.1.4 #^0.10.8+1
+  chewie: ^1.2.2 # ^0.9.8+1
 
 dev_dependencies:
   flutter_test:
